--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
             </div>
             <!-- End Swiper Wrapper -->
 
-            <!-- Arrows 
+            <!-- Arrows -->
             <a href="javascript:void(0);" class="s-swiper__arrow-v1--right s-icon s-icon--md s-icon--white-brd g-radius--circle ti-angle-right js__swiper-btn--next"></a>
             <a href="javascript:void(0);" class="s-swiper__arrow-v1--left s-icon s-icon--md s-icon--white-brd g-radius--circle ti-angle-left js__swiper-btn--prev"></a>
-             End Arrows -->
+           <!--  End Arrows -->
             
            <!--  <a href="#js__scroll-to-section" class="s-scroll-to-section-v1--bc g-margin-b-15--xs">
                 <span class="g-font-size-18--xs g-color--white ti-angle-double-down"></span>
